# bridgetest

./: Cargo.toml  README.md  shell.nix
extra_data/: README.txt  block_texture_map.json  item_texture_map.json  nodeboxes.json  virtual_models.json
scripts/: texture_maps.py
src/: clientbound_translator.rs  commands.rs  main.rs  mc_command.rs  mt_command.rs  mt_definitions.rs  on_tick.rs  packet_handler.rs  serverbound_translator.rs  settings.rs  textures.rs  translator.rs  utils.rs
