[package]
name = "bridgetest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azalea = "0.11.0"
azalea-client = "0.11.0"
azalea-block = "0.11.0"
azalea-language = "0.11.0"

base64 = "0.21.7"
chrono = "0.4.34"
config = "0.14.0"
dirs = "5.0.1"
luanti-protocol = { git = "https://github.com/kawogi/luanti-rs.git" }
luanti-core = { git = "https://github.com/kawogi/luanti-rs.git" }
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
sha1 = "0.10.6"
glam = "0.30.2"
tokio = "1.36.0"
zip-extract = "0.1.3"
rand = "0.8.5"
tokio-stream = "0.1.15"
bimap = "0.6.3"
minecraft-data-rs = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
